# fair-sentence-transformers

./: README.md  REPL_README.md  REPL_run_all_configs.sh  REPL_run_attn_analyzer.sh  REPL_run_wiki_parallel_embeds.sh  REPL_run_wiki_parallel_steps.sh  pyproject.toml
config/: README.md
src/_legacy/: download_samples.py  segment_bias_analysis.py
src/fair_sentence_transformers/analysis/: numerical_analysis.py  segment_embedding_analysis.py
src/fair_sentence_transformers/attention/: attention_analyzer.py
src/fair_sentence_transformers/core/: document_handler.py  embedder.py  experiment_handler.py  fair_sentence_transformer.py
src/fair_sentence_transformers/scripts/: compute_embeddings.py  create_parallel_indices.py  create_wiki_parallel_configs.sh  tokenize_dataset.py
src/fair_sentence_transformers/utils/: custom_data_collator.py  embedding_io.py  wikipedia_id_translator.py
src/fair_sentence_transformers/utils/parallel_wiki/: create_parallel_titles.py  download_parallel_articles.py  download_parallel_articles_title_match.py  download_wikipedia_parallel_titles.sh  process_wikipedia_titles.py  title_to_pageid.py  unify_parallel_datasets.py
src/fair_sentence_transformers/visualizations/: attention_analyzer_viz.py  corpus_viz.py  plot_constants.py  single_plotters.py
src/locobench/core/: embedder.py  fair_sentence_transformer.py
src/locobench/scripts/: compute_embeddings.py
src/locobench/visualizations/: multi_plotter.py
