[tool.poetry]
name = "fair_sentence_transformers"
version = "0.1.0"
description = "A workbench and Benchmarking framework for Long-Context text embedding models and their positional biases"
authors = ["Elias Schuhmacher <eliassebastian.schuhmacher@uzh.ch>"]
readme = "README.md"
packages = [{include = "fair_sentence_transformers", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
torch = ">=2.0.0"
transformers = "^4.53.0"
polars = ">=0.20.0"
matplotlib = ">=3.7.0"
scikit-learn = ">=1.2.0"
numpy = ">=1.24.0"
ipykernel = "^6.29.5"
datasets = "^3.5.1"
einops = "^0.8.1"
seaborn = "^0.13.2"
nnterp = {version = ">0.4.9", allow-prereleases = true}
sentence-transformers = "^5.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[tool.poetry.scripts]
# run-embedding-experiment = "fair_sentence_transformers.scripts.run_experiment:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"